Add Professor Bean logo

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         }
 
         .logo {
-            font-size: 48px;
+            width: 150px;
+            height: 150px;
             margin-bottom: 10px;
+            border-radius: 50%;
         }
 
         h1 {
@@ -168,7 +170,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">☕</div>
+            <img src="logo.png" alt="Professor Bean" class="logo">
             <h1>BrewGPT Support</h1>
             <p class="tagline">Your AI-powered espresso companion</p>
         </header>
