Add dedicated privacy policy page

--- a/index.html
+++ b/index.html
@@ -320,8 +320,7 @@
             <div class="faq-item">
                 <p><strong>Data Collection:</strong> BrewGPT collects only the brew data you enter and optional location data for weather features. We do not collect any analytics or personal information.</p>
                 <p style="margin-top: 15px;"><strong>Data Storage:</strong> All your data is stored entirely on your device. Nothing is uploaded to external servers. Your brew history never leaves your phone.</p>
-                <p style="margin-top: 15px;"><strong>Third Parties:</strong> We use WeatherAPI.com to fetch local weather conditions when you enable the weather feature. No personal data is shared.</p>
-                <p style="margin-top: 15px;"><strong>Your Rights:</strong> You can delete all your data at any time by uninstalling the app. You can disable location access in iOS Settings without affecting core functionality.</p>
+                <p style="margin-top: 15px;"><a href="privacy.html" style="font-weight: 600;">Read Full Privacy Policy →</a></p>
             </div>
         </section>
 
@@ -329,7 +328,7 @@
             <p>© 2026 BrewGPT. All rights reserved.</p>
             <p style="margin-top: 10px;">
                 <a href="mailto:support@edgar.design">Contact</a> ·
-                <a href="#privacy-policy">Privacy</a>
+                <a href="privacy.html">Privacy</a>
             </p>
             <p style="margin-top: 20px; font-size: 0.85em;">
                 Made with ☕ for coffee lovers everywhere
