--- a/privacy.html
+++ b/privacy.html
@@ -214,9 +214,9 @@
             <p><strong>Your location is:</strong></p>
             <ul>
                 <li>Only accessed when you explicitly enable weather features</li>
-                <li>Used solely to fetch weather data via Apple Weather</li>
+                <li>Used solely to fetch weather data from WeatherAPI.com</li>
                 <li>Never stored or tracked by us</li>
-                <li>Processed by Apple according to their <a href="https://www.apple.com/legal/privacy/" target="_blank">Privacy Policy</a></li>
+                <li>Processed according to <a href="https://www.weatherapi.com/privacy.aspx" target="_blank">WeatherAPI.com's Privacy Policy</a></li>
             </ul>
 
             <h3>AI Advice Feature</h3>
@@ -259,7 +259,7 @@
                         <td>Location</td>
                         <td>Only if enabled</td>
                         <td><span class="cross">Never</span></td>
-                        <td>Apple Weather</td>
+                        <td>WeatherAPI (temp.)</td>
                     </tr>
                     <tr>
                         <td>Brew params for AI</td>
@@ -286,9 +286,9 @@
         <section>
             <h2>Third-Party Services</h2>
 
-            <h3>Apple Weather (WeatherKit)</h3>
-            <p>Used to fetch weather conditions when you enable weather auto-fill. Weather data is provided by Apple's WeatherKit service.</p>
-            <p>Privacy Policy: <a href="https://www.apple.com/legal/privacy/" target="_blank">apple.com/legal/privacy</a></p>
+            <h3>WeatherAPI.com</h3>
+            <p>Used to fetch weather conditions when you enable weather auto-fill.</p>
+            <p>Privacy Policy: <a href="https://www.weatherapi.com/privacy.aspx" target="_blank">weatherapi.com/privacy.aspx</a></p>
 
             <h3>AI Service Provider</h3>
             <p>Used to generate brewing advice from Professor Bean.</p>
