Update AI section: Apple Intelligence on-device, no data shared

--- a/privacy.html
+++ b/privacy.html
@@ -222,9 +222,9 @@
             <h3>AI Advice Feature</h3>
             <p>When you request brewing advice from Professor Bean:</p>
             <ul>
-                <li>Your brew parameters (dose, yield, time, grind, rating) are sent to our AI service</li>
-                <li>This data is used only to generate personalized brewing recommendations</li>
-                <li>No personally identifiable information is transmitted</li>
+                <li>Your brew parameters are processed on-device using Apple Intelligence</li>
+                <li>All AI processing happens locally - no data is sent to external servers</li>
+                <li>Your brewing data never leaves your device</li>
             </ul>
         </section>
 
@@ -264,8 +264,8 @@
                     <tr>
                         <td>Brew params for AI</td>
                         <td>When you request advice</td>
+                        <td>On device only</td>
                         <td><span class="cross">No</span></td>
-                        <td>AI provider (temp.)</td>
                     </tr>
                     <tr>
                         <td>Personal info</td>
@@ -290,11 +290,12 @@
             <p>Used to fetch weather conditions when you enable weather auto-fill.</p>
             <p>Privacy Policy: <a href="https://www.weatherapi.com/privacy.aspx" target="_blank">weatherapi.com/privacy.aspx</a></p>
 
-            <h3>AI Service Provider</h3>
-            <p>Used to generate brewing advice from Professor Bean.</p>
+            <h3>Apple Intelligence (On-Device)</h3>
+            <p>Professor Bean's brewing advice is generated using Apple Intelligence, which runs entirely on your device.</p>
             <ul>
-                <li>Only brew parameters are shared (no personal data)</li>
-                <li>Data is not stored or used for training</li>
+                <li>All AI processing happens locally on your iPhone</li>
+                <li>No brew data is sent to external servers</li>
+                <li>Your data never leaves your device</li>
             </ul>
         </section>
 
